# language-delay

./: Cargo.toml  README.md  language_delay.db  resource.rc
doc/: language delay support.docx
migrations/2025-04-08-142607_create_users_and_posts/: up.sql
src/: auth.rs  main.rs  models.rs  routes.rs  schema.rs
static/css/: styles.css
static/js/: screening.js
templates/: base.html  community.html  education.html  index.html  login.html  register.html  screening.html
